shaku_derive/tests/ui/interface_not_name_value.stderr
error: Invalid attribute format. The attribute must be in name-value form. Example: #[shaku(interface = <your trait>)]
 --> $DIR/interface_not_name_value.rs:8:10
  |
8 | #[derive(Component)]
  |          ^^^^^^^^^
  |
  = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: Invalid attribute format. The attribute must be in name-value form. Example: #[shaku(interface = <your trait>)]
  --> $DIR/interface_not_name_value.rs:13:10
   |
13 | #[derive(Provider)]
   |          ^^^^^^^^
   |
   = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)
